--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 "@shineiichijo/marika": "^2.0.6",
 "@vitalets/google-translate-api": "^8.0.0",
 "@xct007/frieren-scraper": "^0.0.2",
+"@NatsukiTeam/Scraper": "github:Wilsmac/NatsukiTeam-Scraper",
 "acrcloud": "^1.4.0",
 "api-dylux": "^1.5.6",
 "express": "^4.18.1",    
